--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -552,5 +552,16 @@
   "you_own_no_token": "Δεν έχετε ακόμη κουπόνια",
   "chart_balance_change": "Αλλαγή υπολοίπου κατά την εμφανιζόμενη περίοδο",
   "waiting_for_payment": "Αναμονή για πληρωμή",
-  "paid": "Καταχωρήθηκε η πληρωμή"
+  "paid": "Καταχωρήθηκε η πληρωμή",
+  "contact_successfully_deleted": "Η επαφή ή οι επαφές διαγράφηκαν με επιτυχία",
+  "edit_name": "Επεξεργασία ονόματος",
+  "no_contacts_yet": "Δεν υπάρχουν επαφές ακόμα",
+  "confirm_delete_contacts_hint": "Διαγράφει τους επιλεγμένους λογαριασμούς από αυτό το πορτοφόλι",
+  "confirm_delete_contacts_q": "Θέλετε να αφαιρέσετε τις επιλεγμένες επαφές;",
+  "add_contact": "Προσθέστε επαφή",
+  "contact_added": "Η επαφή προστέθηκε με επιτυχία",
+  "add_as_contact": "Προσθήκη ως επαφή",
+  "edit_contact": "Επεξεργασία επαφής",
+  "error_add_contact": "Η επαφή δεν προστέθηκε. Πιθανότατα έχετε ήδη προσθέσει αυτόν τον λογαριασμό.",
+  "no_contact_found": "Δεν βρέθηκε επαφή"
 }
