--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Сохраните эту кодовую фразу в надежном месте. Эта фраза необходима для доступа к вашей учетной записи Signum.",
   "memorize_passphrase_help_addon": "Если вы потеряете кодовую фразу, вы не сможете совершать транзакции и ваши монеты будут утеряны. Секретную фразу восстановить невозможно. Храните свою фразу в тайне. Каждый, кто узнает данную фразу, фактически будет являться владельцем этой учетной записи.",
   "message": "Сообщение",
-  "message_is_text": "Сообщение является текстом?",
-  "messages": "Сообщения",
+  "message_is_text": "Текстовое сообщение",
+  "messages": "Разговоры",
   "minimum_fee": "Минимально",
   "multi_out_payment": "Мульти-платежи",
   "my_assets": "Мои токены",
@@ -563,5 +563,9 @@
   "add_as_contact": "Добавить как контакт",
   "edit_contact": "Изменить контакт",
   "error_add_contact": "Контакт не добавлен. Скорее всего, вы уже добавили эту учетную запись.",
-  "no_contact_found": "Контакт не найден"
+  "no_contact_found": "Контакт не найден",
+  "contact": "Контакт",
+  "send_single_message": "Отправить сообщение",
+  "message_is_binary": "Сообщение данных",
+  "add_account_or_contact": "Добавить учетную запись или контакт"
 }
