--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Молимо вас да ову лозинку сачувате на сигурном месту. Ова приступна фраза је потребна за приступ вашем Сигнум налогу.",
   "memorize_passphrase_help_addon": "Ако изгубите приступну фразу, нећете моћи да обављате никакве трансакције, тј. Ваши новчићи су изгубљени. Приступна фраза се не може повратити. Држите ову приступну фразу у тајности. Свако ко зна приступну фразу је де фацто власник налога.",
   "message": "Порука",
-  "message_is_text": "Порука је Текст?",
-  "messages": "Поруке",
+  "message_is_text": "Текстуална порука",
+  "messages": "Разговори",
   "minimum_fee": "Минимум",
   "multi_out_payment": "Плаћања",
   "my_assets": "Моји жетони",
@@ -563,5 +563,9 @@
   "add_as_contact": "Додај као контакт",
   "edit_contact": "Уреди контакт",
   "error_add_contact": "Контакт није додат. Највероватније сте већ додали тај налог.",
-  "no_contact_found": "Није пронађен ниједан контакт"
+  "no_contact_found": "Није пронађен ниједан контакт",
+  "contact": "Контакт",
+  "send_single_message": "Пошаљи поруку",
+  "message_is_binary": "Дата Мессаге",
+  "add_account_or_contact": "Додајте налог или контакт"
 }
