--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Lütfen bu parolayı güvenli bir yerde saklayın. Signum hesabınıza erişmek için bu parola gereklidir.",
   "memorize_passphrase_help_addon": "Parolayı kaybederseniz herhangi bir işlem yapamazsınız, yani jetonlarınız kaybolur. Parola kurtarılamaz. Bu parolayı gizli tutun. Parolayı bilen herkes fiili olarak hesabın sahibidir.",
   "message": "İleti",
-  "message_is_text": "Mesaj Metin mi?",
-  "messages": "Mesajlar",
+  "message_is_text": "SMS",
+  "messages": "Konuşmalar",
   "minimum_fee": "Asgari",
   "multi_out_payment": "ödemeler",
   "my_assets": "Jetonlarım",
@@ -563,5 +563,9 @@
   "add_as_contact": "Kişi listesine ekle",
   "edit_contact": "Kişiyi Düzenle",
   "error_add_contact": "Kişi eklenmedi. Büyük olasılıkla bu hesabı zaten eklemişsinizdir.",
-  "no_contact_found": "Kişi bulunamadı"
+  "no_contact_found": "Kişi bulunamadı",
+  "contact": "Temas etmek",
+  "send_single_message": "Mesaj gönder",
+  "message_is_binary": "Veri Mesajı",
+  "add_account_or_contact": "Hesap veya Kişi Ekle"
 }
