--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Зберігайте цю парольну фразу в надійному місці. Ця парольна фраза потрібна для доступу до вашого облікового запису Signum.",
   "memorize_passphrase_help_addon": "Якщо ви загубите парольну фразу, ви не зможете виконувати жодних транзакцій, тобто ваші монети будуть втрачені. Парольну фразу не можна відновити. Зберігайте цю парольну фразу в таємниці. Кожен, хто знає парольну фразу, є фактичним власником облікового запису.",
   "message": "повідомлення",
-  "message_is_text": "Повідомлення - це текст?",
-  "messages": "Повідомлення",
+  "message_is_text": "Текстове повідомлення",
+  "messages": "Розмови",
   "minimum_fee": "Мінімальний",
   "multi_out_payment": "Платежі",
   "my_assets": "Мої жетони",
@@ -563,5 +563,9 @@
   "add_as_contact": "Додати як контакт",
   "edit_contact": "Редагувати контакт",
   "error_add_contact": "Контакт не додано. Швидше за все, ви вже додали цей обліковий запис.",
-  "no_contact_found": "Контакт не знайдено"
+  "no_contact_found": "Контакт не знайдено",
+  "contact": "контакт",
+  "send_single_message": "Відправити повідомлення",
+  "message_is_binary": "Повідомлення даних",
+  "add_account_or_contact": "Додайте обліковий запис або контакт"
 }
