--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "请将此密码保存在安全的地方。需要此密码才能访问您的 Signum 帐户。",
   "memorize_passphrase_help_addon": "如果您丢失密码短语，您将无法进行任何交易，即您的硬币丢失。密码不可恢复。将此密码保密。每个知道密码短语的人实际上都是该帐户的所有者。",
   "message": "信息",
-  "message_is_text": "消息是文本？",
-  "messages": "留言",
+  "message_is_text": "短信",
+  "messages": "对话",
   "minimum_fee": "最低限度",
   "multi_out_payment": "付款",
   "my_assets": "我的代币",
@@ -563,5 +563,9 @@
   "add_as_contact": "添加为联系人",
   "edit_contact": "更改联系资料",
   "error_add_contact": "未添加联系人。您很可能已经添加了该帐户。",
-  "no_contact_found": "找不到联系人"
+  "no_contact_found": "找不到联系人",
+  "contact": "接触",
+  "send_single_message": "发信息",
+  "message_is_binary": "数据信息",
+  "add_account_or_contact": "添加帐户或联系人"
 }
