--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Моля, съхранявайте тази парола на сигурно място. Тази парола е необходима за достъп до вашия акаунт в Signum.",
   "memorize_passphrase_help_addon": "Ако загубите паролата, няма да можете да извършвате транзакции, т.е. вашите монети са загубени. Пропускът не може да бъде възстановен. Пазете тази парола в тайна. Всеки, който знае паролата, е фактически собственик на акаунта.",
   "message": "Съобщение",
-  "message_is_text": "Съобщението е текст?",
-  "messages": "Съобщения",
+  "message_is_text": "Текстово съобщение",
+  "messages": "Разговори",
   "minimum_fee": "Минимум",
   "multi_out_payment": "Плащания",
   "my_assets": "Моите жетони",
@@ -563,5 +563,9 @@
   "add_as_contact": "Добавяне като контакт",
   "edit_contact": "Редактиране на контакт",
   "error_add_contact": "Контактът не е добавен. Най-вероятно вече сте добавили този акаунт.",
-  "no_contact_found": "Няма намерен контакт"
+  "no_contact_found": "Няма намерен контакт",
+  "contact": "Контакт",
+  "send_single_message": "Изпрати съобщение",
+  "message_is_binary": "Съобщение за данни",
+  "add_account_or_contact": "Добавете акаунт или контакт"
 }
