--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Uložte tuto přístupovou frázi na bezpečném místě. Tato přístupová fráze je nutná pro přístup k vašemu účtu Signum.",
   "memorize_passphrase_help_addon": "Ztratíte-li přístupovou frázi, nebudete moci provádět žádné transakce, tj. Vaše mince budou ztraceny. Přístupovou frázi nelze obnovit. Tuto přístupovou frázi udržujte v tajnosti. Každý, kdo zná přístupovou frázi, je de facto vlastníkem účtu.",
   "message": "Zpráva",
-  "message_is_text": "Zpráva je text?",
-  "messages": "Zprávy",
+  "message_is_text": "Textová zpráva",
+  "messages": "Konverzace",
   "minimum_fee": "Minimální",
   "multi_out_payment": "Platby",
   "my_assets": "Moje žetony",
@@ -563,5 +563,9 @@
   "add_as_contact": "Přidat jako kontakt",
   "edit_contact": "Upravit kontakt",
   "error_add_contact": "Kontakt nebyl přidán. S největší pravděpodobností jste tento účet již přidali.",
-  "no_contact_found": "Nebyl nalezen žádný kontakt"
+  "no_contact_found": "Nebyl nalezen žádný kontakt",
+  "contact": "Kontakt",
+  "send_single_message": "Poslat zprávu",
+  "message_is_binary": "Datová zpráva",
+  "add_account_or_contact": "Přidat účet nebo kontakt"
 }
