--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Αποθηκεύστε αυτήν τη φράση πρόσβασης σε ασφαλές μέρος. Αυτή η φράση πρόσβασης απαιτείται για την πρόσβαση στον λογαριασμό σας Signum.",
   "memorize_passphrase_help_addon": "Εάν χάσετε τη φράση πρόσβασης, δεν θα μπορείτε να κάνετε συναλλαγές, δηλαδή τα κέρματά σας χάνονται Η φράση πρόσβασης δεν μπορεί να ανακτηθεί. Κρατήστε μυστική αυτήν τη φράση πρόσβασης. Όλοι όσοι γνωρίζουν τη φράση πρόσβασης είναι de facto κάτοχος του λογαριασμού.",
   "message": "Μήνυμα",
-  "message_is_text": "Το μήνυμα είναι κείμενο;",
-  "messages": "Μηνύματα",
+  "message_is_text": "Γραπτό μήνυμα",
+  "messages": "συνομιλίες",
   "minimum_fee": "Ελάχιστο",
   "multi_out_payment": "Πληρωμές",
   "my_assets": "My Tokens",
@@ -563,5 +563,9 @@
   "add_as_contact": "Προσθήκη ως επαφή",
   "edit_contact": "Επεξεργασία επαφής",
   "error_add_contact": "Η επαφή δεν προστέθηκε. Πιθανότατα έχετε ήδη προσθέσει αυτόν τον λογαριασμό.",
-  "no_contact_found": "Δεν βρέθηκε επαφή"
+  "no_contact_found": "Δεν βρέθηκε επαφή",
+  "contact": "Επικοινωνία",
+  "send_single_message": "Να στείλετε μήνυμα",
+  "message_is_binary": "Μήνυμα δεδομένων",
+  "add_account_or_contact": "Προσθήκη λογαριασμού ή επαφής"
 }
