--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Guarde esta frase de contraseña en un lugar seguro. Esta frase de contraseña es necesaria para acceder a su cuenta Signum.",
   "memorize_passphrase_help_addon": "Si pierde la frase de contraseña, no podrá realizar ninguna transacción, es decir, sus monedas se perderán. La frase de contraseña no se puede recuperar. Mantenga esta frase de contraseña en secreto. Todos los que conocen la frase de contraseña son de facto el propietario de la cuenta.",
   "message": "Mensaje",
-  "message_is_text": "¿El mensaje es texto?",
-  "messages": "Mensajes",
+  "message_is_text": "Mensaje de texto",
+  "messages": "Conversaciones",
   "minimum_fee": "Mínimo",
   "multi_out_payment": "Pagos",
   "my_assets": "Mis tokens",
@@ -563,5 +563,9 @@
   "add_as_contact": "Agregar como contacto",
   "edit_contact": "Editar contacto",
   "error_add_contact": "Contacto no agregado. Lo más probable es que ya haya agregado esa cuenta.",
-  "no_contact_found": "Ningún contacto encontrado"
+  "no_contact_found": "Ningún contacto encontrado",
+  "contact": "Contacto",
+  "send_single_message": "Enviar mensaje",
+  "message_is_binary": "Mensaje de datos",
+  "add_account_or_contact": "Agregar cuenta o contacto"
 }
