--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "कृपया इस पासफ़्रेज़ को किसी सुरक्षित स्थान पर संगृहीत करें. आपके साइनम खाते तक पहुँचने के लिए इस पासफ़्रेज़ की आवश्यकता है।",
   "memorize_passphrase_help_addon": "यदि आप पासफ़्रेज़ खो देते हैं तो आप कोई लेन-देन नहीं कर पाएंगे, यानी आपके सिक्के खो गए हैं। पासफ़्रेज़ पुनर्प्राप्त करने योग्य नहीं है। इस पासफ़्रेज़ को गुप्त रखें। पासफ़्रेज़ जानने वाला हर व्यक्ति वास्तव में खाते का स्वामी होता है।",
   "message": "संदेश",
-  "message_is_text": "संदेश पाठ है?",
-  "messages": "संदेशों",
+  "message_is_text": "पाठ संदेश",
+  "messages": "बात चिट",
   "minimum_fee": "न्यूनतम",
   "multi_out_payment": "भुगतान",
   "my_assets": "मेरे टोकन",
@@ -563,5 +563,9 @@
   "add_as_contact": "संपर्क के रूप में जोड़ें",
   "edit_contact": "संपादित संपर्क",
   "error_add_contact": "संपर्क नहीं जोड़ा गया। संभवत: आपने वह खाता पहले ही जोड़ लिया है।",
-  "no_contact_found": "कोई संपर्क नहीं मिला"
+  "no_contact_found": "कोई संपर्क नहीं मिला",
+  "contact": "संपर्क",
+  "send_single_message": "मेसेज भेजें",
+  "message_is_binary": "डेटा संदेश",
+  "add_account_or_contact": "खाता या संपर्क जोड़ें"
 }
