--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Prašome saugoti šią slaptafrazę saugioje vietoje. Ši slaptafrazė reikalinga norint pasiekti jūsų „Signum“ paskyrą.",
   "memorize_passphrase_help_addon": "Pamiršę slaptafrazę negalėsite atlikti jokių operacijų, t. Y. Jūsų monetos bus pamestos. Slaptafrazės atkurti negalima. Laikykite šią slaptafrazę paslaptyje. Visi, žinantys slaptafrazę, de facto yra paskyros savininkai.",
   "message": "Pranešimas",
-  "message_is_text": "Pranešimas yra tekstas?",
-  "messages": "Žinutės",
+  "message_is_text": "Žinutė",
+  "messages": "Pokalbiai",
   "minimum_fee": "Minimumas",
   "multi_out_payment": "Mokėjimai",
   "my_assets": "Mano žetonai",
@@ -563,5 +563,9 @@
   "add_as_contact": "Pridėti kaip kontaktą",
   "edit_contact": "Redaguoti kontaktą",
   "error_add_contact": "Kontaktas nepridėtas. Greičiausiai tą paskyrą jau pridėjote.",
-  "no_contact_found": "Nerasta jokių kontaktų"
+  "no_contact_found": "Nerasta jokių kontaktų",
+  "contact": "kontaktas",
+  "send_single_message": "Siųsti žinutę",
+  "message_is_binary": "Duomenų pranešimas",
+  "add_account_or_contact": "Pridėti paskyrą arba kontaktą"
 }
