--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Guarde esta senha em um local seguro. Esta senha é necessária para acessar sua conta Signum.",
   "memorize_passphrase_help_addon": "Se você perder a senha, não poderá fazer nenhuma transação, ou seja, suas moedas serão perdidas. A senha longa não é recuperável. Mantenha esta senha longa em segredo. Todo mundo que conhece a senha longa é de fato o proprietário da conta.",
   "message": "Mensagem",
-  "message_is_text": "A mensagem é texto?",
-  "messages": "Mensagens",
+  "message_is_text": "Mensagem de texto",
+  "messages": "Conversas",
   "minimum_fee": "Mínimo",
   "multi_out_payment": "Pagamentos",
   "my_assets": "Meus tokens",
@@ -519,7 +519,7 @@
   "view_alias": "Ver pseudônimo",
   "recipient_required": "O destinatário é obrigatório",
   "unregistered_address": "Endereço não registrado",
-  "account_offline": "Assistir apenas",
+  "account_offline": "Observando",
   "account_safe": "Seguro",
   "account_unsafe": "Inseguro!",
   "error_connection_fail": "Não foi possível conectar a um nó. Parece que não está acessível. Por favor escolha um outro",
@@ -563,5 +563,9 @@
   "add_as_contact": "Adicionar como contato",
   "edit_contact": "Editar Contato",
   "error_add_contact": "Contato não adicionado. Muito provavelmente você já adicionou essa conta.",
-  "no_contact_found": "Nenhum contato encontrado"
+  "no_contact_found": "Nenhum contato encontrado",
+  "contact": "Contato",
+  "send_single_message": "Enviar Mensagem",
+  "message_is_binary": "Mensagem de dados",
+  "add_account_or_contact": "Adicionar conta ou contato"
 }
