--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -231,8 +231,8 @@
   "memorize_passphrase_help": "Uložte túto prístupovú frázu na bezpečnom mieste. Táto prístupová fráza je potrebná na prístup do vášho účtu Signum.",
   "memorize_passphrase_help_addon": "Ak stratíte prístupovú frázu, nebudete môcť robiť žiadne transakcie, t. J. Vaše mince sú stratené. Prístupová fráza sa nedá obnoviť. Ponechajte túto prístupovú frázu v tajnosti. Každý, kto pozná prístupovú frázu, je de facto vlastníkom účtu.",
   "message": "Správa",
-  "message_is_text": "Správa je textová?",
-  "messages": "Správy",
+  "message_is_text": "Textová správa",
+  "messages": "Rozhovory",
   "minimum_fee": "Minimálne",
   "multi_out_payment": "Platby",
   "my_assets": "Moje žetóny",
@@ -563,5 +563,9 @@
   "add_as_contact": "Pridať ako kontakt",
   "edit_contact": "Upraviť kontakt",
   "error_add_contact": "Kontakt nebol pridaný. S najväčšou pravdepodobnosťou ste tento účet už pridali.",
-  "no_contact_found": "Nenašiel sa žiadny kontakt"
+  "no_contact_found": "Nenašiel sa žiadny kontakt",
+  "contact": "Kontakt",
+  "send_single_message": "Poslať správu",
+  "message_is_binary": "Dátová správa",
+  "add_account_or_contact": "Pridať účet alebo kontakt"
 }
